# qClash

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  resources.qrc
assets/: CMakeLists.txt  com.qclash.qClash.desktop  qClash.desktop  qclash_icons.qrc  qclash_windows_icons.qrc  qclash_windows_icons.rc  tpl-linux-autostart.desktop  tpl-macos-autostart.plist
assets/icons/: qClash.icns
config/: clash.yaml
lang/: en_US.ts  zh_CN.ts
src/: BuildConfig.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: clashApi.cpp  clashApi.h  clashCore.cpp  clashCore.h  common.cpp  common.h  configurator.cpp  configurator.h  proxy.cpp  proxy.h
src/dialogs/: aboutDialog.cpp  aboutDialog.h  subscribeDialog.cpp  subscribeDialog.h  subscribeNewDialog.cpp  subscribeNewDialog.h
src/utils/: httputil.cpp  httputil.h  iconsForkAwesome.h  networkproxy.cpp  networkproxy.h  utility.cpp  utility.h  wsclient.cpp  wsclient.h
src/widgets/: collapseWidget.cpp  collapseWidget.h  flowlayout.cpp  flowlayout.h  proxyGroupWidget.cpp  proxyGroupWidget.h
test/utils/: http_test.cpp
